--- a/Hari/pages/login.html
+++ b/Hari/pages/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/form.css"/>
     <link rel="stylesheet" href="../styles/footer.css"/>
   </head>
-  <body>
+  <body style = "background-color: #f9f9f9;">
     <nav>
       <div class="nav-logo">
         <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
@@ -18,15 +18,16 @@
         <a href="test.html">ABOUT</a>
       </div>
     </nav>
-    <form method="POST" action="login.php">
+    <form method="POST" action="authmain.php" id="logform">
       <img src="../assets/mainlogo.png" alt="Logo" class="logo"/>
       <label class="subtitle">Resell and Earn </label>
-      <label>Username <input type="text" placeholder="Enter your Username"></label>
-      <label>Password <input type="password" placeholder="Enter your Password"> </label> 
+      <label>Username <input type="text" placeholder="Enter your Username" id="name"  name="name"></label>
+      <label>Password <input type="password" placeholder="Enter your Password" id="password" name="password"> </label> 
       <input type="submit" value="Login" class="custom-button">
       <input type="button" value="Register" class="custom-button" onclick="window.location.href='register.html';">
     </form>
   </body>
+  <script type="text/javascript" src="../script/login.js"></script>
   <footer>
     <div class="footer-left">FOOTER</div>
   </footer>
