--- a/Hari/pages/shoppingcart.html
+++ b/Hari/pages/shoppingcart.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>Shopping Cart</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../styles/nav.css" />
-    <link rel="stylesheet" href="../styles/form.css"/>
-    <link rel="stylesheet" href="../styles/footer.css"/>
-  </head>
-  <body>
+    <link rel="stylesheet" href="../styles/form.css" />
+    <link rel="stylesheet" href="../styles/footer.css" />
+    <link rel="stylesheet" href="../styles/shoppingcart.css" />
+    <script type="text/javascript" src="../script/shoppingcart_qty.js"></script>
+</head>
+<body>
     <nav>
-      <div class="nav-logo">
-        <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
-      </div>
-      <div class="nav-links">
-        <a href="test.html">STYLE</a>
-        <a href="test.html">SHOP</a>
-        <a href="test.html">ABOUT</a>
-        <a href="test.html">Profile</a>
-      </div>
+        <div class="nav-logo">
+            <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
+        </div>
+        <div class="nav-links">
+            <a href="test.html">STYLE</a>
+            <a href="test.html">SHOP</a>
+            <a href="test.html">ABOUT</a>
+            <a href="test.html">PROFILE</a>
+        </div>
     </nav>
+    <div class="container">
+        <h1>Shopping Bag</h1>
+        <p>1 item</p>
+        <hr>
+        <div class="shopping-item">
+            <img src="../assets/bag.png" alt="Item Image" class="item-image">
+            <div class="item-details">
+                <h2>Brand</h2>
+                <p>Item Name</p>
+                <div class="actions">
+                    <a href="#">Remove from Bag</a>
+                </div>
+            </div>
+            <div class="item-price-quantity">
+                <p class="price">SGD $795</p>
+                <div class="quantity-controls">
+                    <button onclick="decreaseQuantity()">-</button>
+                    <input type="text" id="quantity" value="1" readonly style="width: 30px; text-align: center;" />
+                    <button onclick="increaseQuantity()">+</button>
+                </div>
+            </div>
+        </div>
 
-  </body>
-  <footer>
+        <div class="order-summary">
+            <h3>Order summary</h3>
+            <div class="summary-details">
+                <p>Item Sub-Total <span id="total-price">$795</span></p>
+                <p>Total (SGD) <span class="total">$795</span></p>
+            </div>
+            <button class="purchase-btn">Proceed to purchase</button>
+            <div class="payment-methods">
+            </div>
+        </div>
+    </div>
+</body>
+<footer>
     <div class="footer-left">FOOTER</div>
-  </footer>
+</footer>
 </html>
