--- a/Hari/pages/registersuccess.html
+++ b/Hari/pages/registersuccess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Register</title>
+    <title>Login</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../styles/nav.css" />
     <link rel="stylesheet" href="../styles/form.css"/>
@@ -18,19 +18,17 @@
         <a href="test.html">ABOUT</a>
       </div>
     </nav>
-    <form method="POST" action="register.php" id="regForm">
+    <form method="POST" action="authmain.php" id="logform">
       <img src="../assets/mainlogo.png" alt="Logo" class="logo"/>
       <label class="subtitle">Resell and Earn </label>
+      <label class="register-success">Register Successful</label>
       <label>Username <input type="text" placeholder="Enter your Username" id="name"  name="name"></label>
-      <label>Email <input type="text" placeholder="Enter your Email" id="email" name="email"> </label> 
-      <label>Phone Number: <input type="text" placeholder="Enter your Phone Number" id="number" name="number"> </label> 
-      <label>Password <input type="password" placeholder="Enter your Password" id="pass" name="password"> </label> 
-      <label>Retype Password <input type="password" placeholder="Enter your Password" id="verifypass" name="password2"> </label> 
-      <input type="submit" value="Register" class="custom-button" name="submit">
-      <input type="button" value="Login" class="custom-button" onclick="window.location.href='login.html';">
-      <script type="text/javascript" src="../script/register.js"></script>
+      <label>Password <input type="password" placeholder="Enter your Password" id="password" name="password"> </label> 
+      <input type="submit" value="Login" class="custom-button">
+      <input type="button" value="Register" class="custom-button" onclick="window.location.href='register.html';">
     </form>
   </body>
+  <script type="text/javascript" src="../script/login.js"></script>
   <footer>
     <div class="footer-left">FOOTER</div>
   </footer>
