--- a/Hari/pages/cart/shoppingcart.html
+++ b/Hari/pages/cart/shoppingcart.html
@@ -3,16 +3,16 @@
 <head>
     <title>Shopping Cart</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../styles/nav.css" />
-    <link rel="stylesheet" href="../styles/form.css" />
-    <link rel="stylesheet" href="../styles/footer.css" />
-    <link rel="stylesheet" href="../styles/shoppingcart.css" />
-    <script type="text/javascript" src="../script/shoppingcart_qty.js"></script>
+    <link rel="stylesheet" href="../../styles/nav.css" />
+    <link rel="stylesheet" href="../../styles/form.css" />
+    <link rel="stylesheet" href="../../styles/footer.css" />
+    <link rel="stylesheet" href="../../styles/shoppingcart.css" />
+    <script type="text/javascript" src="../../script/shoppingcart_qty.js"></script>
 </head>
 <body>
     <nav>
         <div class="nav-logo">
-            <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
+            <a href="#home"><img src="../../assets/mainlogo.png" alt="Logo" /></a>
         </div>
         <div class="nav-links">
             <a href="test.html">STYLE</a>
@@ -26,7 +26,7 @@
         <p>1 item</p>
         <hr>
         <div class="shopping-item">
-            <img src="../assets/bag.png" alt="Item Image" class="item-image">
+            <img src="../../assets/asics.png" alt="Item Image" class="item-image">
             <div class="item-details">
                 <h2>Brand</h2>
                 <p>Item Name</p>
