--- a/Hari/pages/login/login.html
+++ b/Hari/pages/login/login.html
@@ -3,14 +3,14 @@
   <head>
     <title>Login</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../styles/nav.css" />
-    <link rel="stylesheet" href="../styles/form.css"/>
-    <link rel="stylesheet" href="../styles/footer.css"/>
+    <link rel="stylesheet" href="../../styles/nav.css" />
+    <link rel="stylesheet" href="../../styles/form.css"/>
+    <link rel="stylesheet" href="../../styles/footer.css"/>
   </head>
   <body style = "background-color: #f9f9f9;">
     <nav>
       <div class="nav-logo">
-        <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
+        <a href="#home"><img src="../../assets/mainlogo.png" alt="Logo" /></a>
       </div>
       <div class="nav-links">
         <a href="test.html">STYLE</a>
@@ -19,16 +19,15 @@
       </div>
     </nav>
     <form method="POST" action="authmain.php" id="logform">
-      <img src="../assets/mainlogo.png" alt="Logo" class="logo"/>
+      <img src="../../assets/mainlogo.png" alt="Logo" class="logo"/>
       <label class="subtitle">Resell and Earn </label>
-      <label class="register-success">Register Successful</label>
       <label>Username <input type="text" placeholder="Enter your Username" id="name"  name="name"></label>
       <label>Password <input type="password" placeholder="Enter your Password" id="password" name="password"> </label> 
       <input type="submit" value="Login" class="custom-button">
-      <input type="button" value="Register" class="custom-button" onclick="window.location.href='register.html';">
+      <input type="button" value="Register" class="custom-button" onclick="window.location.href='../../pages/register/register.html';">
     </form>
   </body>
-  <script type="text/javascript" src="../script/login.js"></script>
+  <script type="text/javascript" src="../../script/login.js"></script>
   <footer>
     <div class="footer-left">FOOTER</div>
   </footer>
