--- a/Hari/pages/register/register.html
+++ b/Hari/pages/register/register.html
@@ -3,14 +3,14 @@
   <head>
     <title>Register</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../styles/nav.css" />
-    <link rel="stylesheet" href="../styles/form.css"/>
-    <link rel="stylesheet" href="../styles/footer.css"/>
+    <link rel="stylesheet" href="../../styles/nav.css" />
+    <link rel="stylesheet" href="../../styles/form.css"/>
+    <link rel="stylesheet" href="../../styles/footer.css"/>
   </head>
   <body style = "background-color: #f9f9f9;">
     <nav>
       <div class="nav-logo">
-        <a href="#home"><img src="../assets/mainlogo.png" alt="Logo" /></a>
+        <a href="#home"><img src="../../assets/mainlogo.png" alt="Logo" /></a>
       </div>
       <div class="nav-links">
         <a href="test.html">STYLE</a>
@@ -19,7 +19,7 @@
       </div>
     </nav>
     <form method="POST" action="register.php" id="regForm">
-      <img src="../assets/mainlogo.png" alt="Logo" class="logo"/>
+      <img src="../../assets/mainlogo.png" alt="Logo" class="logo"/>
       <label class="subtitle">Resell and Earn </label>
       <label>Username <input type="text" placeholder="Enter your Username" id="name"  name="name"></label>
       <label>Email <input type="text" placeholder="Enter your Email" id="email" name="email"> </label> 
@@ -27,8 +27,8 @@
       <label>Password <input type="password" placeholder="Enter your Password" id="pass" name="password"> </label> 
       <label>Retype Password <input type="password" placeholder="Enter your Password" id="verifypass" name="password2"> </label> 
       <input type="submit" value="Register" class="custom-button" name="submit">
-      <input type="button" value="Login" class="custom-button" onclick="window.location.href='login.html';">
-      <script type="text/javascript" src="../script/register.js"></script>
+      <input type="button" value="Login" class="custom-button" onclick="window.location.href='../../pages/login/login.html';">
+      <script type="text/javascript" src="../../script/register.js"></script>
     </form>
   </body>
   <footer>
