--- a/Hari/pages/login/loginfail.html
+++ b/Hari/pages/login/loginfail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Register Success</title>
+    <title>Login</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../styles/nav.css" />
     <link rel="stylesheet" href="../../styles/form.css"/>
@@ -18,14 +18,14 @@
         <a href="test.html">ABOUT</a>
       </div>
     </nav>
-    <form method="POST" action="../login/authmain.php" id="logform">
+    <form method="POST" action="authmain.php" id="logform">
       <img src="../../assets/mainlogo.png" alt="Logo" class="logo"/>
       <label class="subtitle">Resell and Earn </label>
-      <label class="register-success">Register Successful</label>
+      <label class='login-failed'>Unable to Login. Try again!</label>
       <label>Username <input type="text" placeholder="Enter your Username" id="name"  name="name"></label>
       <label>Password <input type="password" placeholder="Enter your Password" id="password" name="password"> </label> 
       <input type="submit" value="Login" class="custom-button">
-      <input type="button" value="Register" class="custom-button" onclick="window.location.href='register.html';">
+      <input type="button" value="Register" class="custom-button" onclick="window.location.href='../../pages/register/register.html';">
     </form>
   </body>
   <script type="text/javascript" src="../../script/login.js"></script>
