--- a/Hari/pages/wishlist/wishlist.html
+++ b/Hari/pages/wishlist/wishlist.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Shopping Cart</title>
+    <title>Wish List</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../styles/nav.css" />
     <link rel="stylesheet" href="../../styles/form.css" />
     <link rel="stylesheet" href="../../styles/footer.css" />
-    <link rel="stylesheet" href="../../styles/shoppingcart.css" />
-    <script type="text/javascript" src="../../script/shoppingcart_qty.js"></script>
+    <link rel="stylesheet" href="../../styles/wishlist.css" />
+    <script type="text/javascript" src="../../script/wishlist.js"></script>
 </head>
 <body>
     <nav>
@@ -22,37 +22,29 @@
         </div>
     </nav>
     <div class="container">
-        <h1>Shopping Bag</h1>
-        <p>1 item</p>
+        <h1>Wish List</h1>
+        <p>1 item in your wish list</p>
         <hr>
-        <div class="shopping-item">
+        <div class="wishlist-item">
             <img src="../../assets/asics.png" alt="Item Image" class="item-image">
             <div class="item-details">
                 <h2>Brand</h2>
                 <p>Item Name</p>
                 <div class="actions">
-                    <a href="#">Remove from Bag</a>
+                    <a href="#">Move to Shopping Bag</a>
+                    <div class="actions">
+                        <a href="#" class="remove">Remove from Wish List</a>
+                    </div>                    
                 </div>
             </div>
-            <div class="item-price-quantity">
+            <div class="item-price">
                 <p class="price">SGD $795</p>
-                <div class="quantity-controls">
-                    <button onclick="decreaseQuantity()">-</button>
-                    <input type="text" id="quantity" value="1" readonly style="width: 30px; text-align: center;" />
-                    <button onclick="increaseQuantity()">+</button>
-                </div>
             </div>
         </div>
 
-        <div class="order-summary">
-            <h3>Order summary</h3>
-            <div class="summary-details">
-                <p>Item Sub-Total <span id="total-price">$795</span></p>
-                <p>Total (SGD) <span class="total">$795</span></p>
-            </div>
-            <button class="purchase-btn">Proceed to purchase</button>
-            <div class="payment-methods">
-            </div>
+        <div class="wishlist-summary">
+            <h3>Keep shopping for more items</h3>
+            <button class="continue-shopping-btn">Continue Shopping</button>
         </div>
     </div>
 </body>
