wishlist added and updated cart history

--- a/Hari/pages/wishlist/wishlist.html
+++ b/Hari/pages/wishlist/wishlist.html
@@ -31,7 +31,7 @@
                 <h2>Brand</h2>
                 <p>Item Name</p>
                 <div class="actions">
-                    <a href="#">Move to Shopping Bag</a>
+                    <a href="../cart/shoppingcart.php">Move to Shopping Bag</a>
                     <div class="actions">
                         <a href="#" class="remove">Remove from Wish List</a>
                     </div>                    
